# C-Program

./: a.out  test  test.cpp
.kdev4/: Program.kdev4
CmakeTest/cmake/proj/lib_hello/: CMakeLists.txt
DesignPattern/: Observer  Observer.cpp  a.out
DesignPattern/learn/: learn  learn.cpp
Mysql/: a.out  mysql1.cpp
OpenCV/CV_INSIDE_QT/: CV_INSIDE_QT.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
OpenCV/CV_QT/: CV_QT.pro  widget.ui
OpenCV/basic_draw/: main.cpp
OpenCV/contours/: main.cpp
OpenCV/discrete_Fourier_Transform/: main.cpp
OpenCV/draw_text/: main.cpp
OpenCV/filter/: main.cpp
OpenCV/liner_operator/: main.cpp
OpenCV/maks_operations/: main.cpp
OpenCV/mopphology/: main.cpp
OpenCV/parallel/: main.cpp
OpenCV/readImage/: CMakeLists.txt  main.cpp
OpenCV/read_GeospatialRaster/: main.cpp  (+1 more)
Quadtree/: .103.swp  a.out  quadtree  quadtree.cpp  quadtree.cpp~
SmartPointer/: SmartPointer.cpp  SmartPointer.cpp~  a.out  b  test.cpp  test.cpp~
Socket/: Client.cpp  ClientMain.cpp  Common.h  Server.cpp  Server.h  chatroom_client  chatroom_server
Socket2/: Client.c  Server.c  Socket2.kdev4  a.out  server
StrFuntion/: a.out  strlen.cpp  strlen.cpp~
Threaa/: .swp  .thread2.cpp.swp  a.out  b  c  c11.cpp  c11.cpp~  fork_thread.txt  thread1  thread1.cpp  thread1.cpp~  thread2  thread2.cpp  thread2.cpp~  thread3  thread3.cpp  thread3.cpp~
boost/: a.out  example1.cpp
sqlite/: a.out  batchInsert.cpp  db.db  db2.db  insert  insert.cpp  insert.db  lab.db  learn.cpp  select  select.cpp  select2.cpp  t  test.db  test.db-journal  tutorial.cpp
(+72 files in other folders)
